kubernetes/admin-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-server
  namespace: petclinic
  labels:
    app: admin-server
spec:
  containers:
    - name: admin-server
      image: 962480255828.dkr.ecr.eu-west-3.amazonaws.com/devops_petclinic_1:devops_spring-petclinic-admin-server
      imagePullPolicy: Always
      ports:
        - containerPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: petclinic
spec:
  selector:
    app: admin-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
