kubernetes/api-gateway.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-gateway
  namespace: petclinic
  labels:
    app: api-gateway
spec:
  containers:
    - name: api-gateway
      image: 962480255828.dkr.ecr.eu-west-3.amazonaws.com/devops_petclinic_1:devops_spring-petclinic-api-gateway
      imagePullPolicy: Always
      ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: petclinic
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
