kubernetes/customers-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customers-service
  namespace: petclinic
  labels:
    app: customers-service
spec:
  containers:
    - name: customers-service
      image: 962480255828.dkr.ecr.eu-west-3.amazonaws.com/devops_petclinic_1:devops_spring-petclinic-customers-service
      imagePullPolicy: Always
      ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: petclinic
spec:
  selector:
    app: customers-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
