kubernetes/discovery-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: discovery-server
  namespace: petclinic
  labels:
    app: discovery-server
spec:
  containers:
    - name: discovery-server
      image: 962480255828.dkr.ecr.eu-west-3.amazonaws.com/devops_petclinic_1:devops_spring-petclinic-discovery-server
      imagePullPolicy: Always
      ports:
        - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: petclinic
spec:
  selector:
    app: discovery-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8761
      targetPort: 8761
