kubernetes/visits-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: visits-service
  namespace: petclinic
  labels:
    app: visits-service
spec:
  containers:
    - name: visits-service
      image: 962480255828.dkr.ecr.eu-west-3.amazonaws.com/devops_petclinic_1:devops_spring-petclinic-visits-service
      imagePullPolicy: Always
      ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: petclinic
spec:
  selector:
    app: visits-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
